[package]
name = "ft_vox"
version = "0.1.0"
authors = ["gboudrie <gboudrie@student.42.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.17.0"
vulkano-win = "0.17.0"
vulkano-shaders = "0.17.0"
winit = "0.21.0"
